@@ -10,6 +10,7 @@ import io.airlift.log.Logging;
 import io.airlift.testing.Assertions;
 import io.airlift.testing.Closeables;
 import io.airlift.units.Duration;
+import org.eclipse.jetty.http2.server.HTTP2CServerConnectionFactory;
 import org.eclipse.jetty.server.HttpConfiguration;
 import org.eclipse.jetty.server.HttpConnectionFactory;
 import org.eclipse.jetty.server.SecureRequestCustomizer;
@@ -124,7 +125,10 @@ public abstract class AbstractHttpClientTest
             connector = new ServerConnector(server, sslConnectionFactory, new HttpConnectionFactory(httpConfiguration));
         }
         else {
-            connector = new ServerConnector(server, new HttpConnectionFactory(httpConfiguration));
+            HttpConnectionFactory http1 = new HttpConnectionFactory(httpConfiguration);
+            HTTP2CServerConnectionFactory http2c = new HTTP2CServerConnectionFactory(httpConfiguration);
+
+            connector = new ServerConnector(server, http1, http2c);
         }
 
         connector.setIdleTimeout(30000);
