@@ -23,6 +23,7 @@ import io.airlift.event.client.EventClient;
 import io.airlift.http.server.HttpServerBinder.HttpResourceBinding;
 import io.airlift.node.NodeInfo;
 import io.airlift.tracetoken.TraceTokenManager;
+import org.eclipse.jetty.http2.server.HTTP2CServerConnectionFactory;
 import org.eclipse.jetty.jmx.MBeanContainer;
 import org.eclipse.jetty.security.ConstraintMapping;
 import org.eclipse.jetty.security.ConstraintSecurityHandler;
@@ -30,7 +31,6 @@ import org.eclipse.jetty.security.LoginService;
 import org.eclipse.jetty.security.SecurityHandler;
 import org.eclipse.jetty.security.authentication.BasicAuthenticator;
 import org.eclipse.jetty.server.Connector;
-import org.eclipse.jetty.server.Handler;
 import org.eclipse.jetty.server.HttpConfiguration;
 import org.eclipse.jetty.server.HttpConnectionFactory;
 import org.eclipse.jetty.server.RequestLog;
@@ -147,7 +147,10 @@ public class HttpServer
 
             Integer acceptors = config.getHttpAcceptorThreads();
             Integer selectors = config.getHttpSelectorThreads();
-            httpConnector = new ServerConnector(server, null, null, null, acceptors == null ? -1 : acceptors, selectors == null ? -1 : selectors, new HttpConnectionFactory(httpConfiguration));
+            HttpConnectionFactory http1 = new HttpConnectionFactory(httpConfiguration);
+            HTTP2CServerConnectionFactory http2c = new HTTP2CServerConnectionFactory(httpConfiguration);
+            http2c.setMaxConcurrentStreams(config.getHttp2MaxConcurrentStreams());
+            httpConnector = new ServerConnector(server, null, null, null, acceptors == null ? -1 : acceptors, selectors == null ? -1 : selectors, http1, http2c);
             httpConnector.setName("http");
             httpConnector.setPort(httpServerInfo.getHttpUri().getPort());
             httpConnector.setIdleTimeout(config.getNetworkMaxIdleTime().toMillis());
@@ -213,7 +216,10 @@ public class HttpServer
                 SslConnectionFactory sslConnectionFactory = new SslConnectionFactory(sslContextFactory, "http/1.1");
                 adminConnector = new ServerConnector(server, adminThreadPool, null, null, 0, -1, sslConnectionFactory, new HttpConnectionFactory(adminConfiguration));
             } else {
-                adminConnector = new ServerConnector(server, adminThreadPool, null, null, 0, -1, new HttpConnectionFactory(adminConfiguration));
+                HttpConnectionFactory http1 = new HttpConnectionFactory(adminConfiguration);
+                HTTP2CServerConnectionFactory http2c = new HTTP2CServerConnectionFactory(adminConfiguration);
+                http2c.setMaxConcurrentStreams(config.getHttp2MaxConcurrentStreams());
+                adminConnector = new ServerConnector(server, adminThreadPool, null, null, -1, -1, http1, http2c);
             }
 
             adminConnector.setName("admin");
@@ -247,7 +253,7 @@ public class HttpServer
         HandlerCollection handlers = new HandlerCollection();
 
         for (HttpResourceBinding resource : resources) {
-            GzipHandler gzipHandler = new GzipHandler();
+            GzipHandler gzipHandler = new HackGzipHandler();
             gzipHandler.setHandler(new ClassPathResourceHandler(resource.getBaseUri(), resource.getClassPathResourceBase(), resource.getWelcomeFiles()));
             handlers.addHandler(gzipHandler);
         }
@@ -302,7 +308,7 @@ public class HttpServer
             context.addFilter(new FilterHolder(filter), "/*", null);
         }
         // -- gzip handler
-        context.setGzipHandler(new GzipHandler());
+        context.setGzipHandler(new HackGzipHandler());
 
         // -- the servlet
         ServletHolder servletHolder = new ServletHolder(theServlet);
