@@ -75,6 +75,7 @@ public class HttpServerConfig
     private Duration threadMaxIdleTime = new Duration(1, TimeUnit.MINUTES);
     private Duration networkMaxIdleTime = new Duration(200, TimeUnit.SECONDS);
     private DataSize maxRequestHeaderSize;
+    private int http2MaxConcurrentStreams = 16384;
 
     private String userAuthFile;
 
@@ -419,6 +420,20 @@ public class HttpServerConfig
     public HttpServerConfig setMaxRequestHeaderSize(DataSize maxRequestHeaderSize)
     {
         this.maxRequestHeaderSize = maxRequestHeaderSize;
+        return this;
+    }
+
+    @Min(100) // per RFC 7540 section 6.5.2
+    public int getHttp2MaxConcurrentStreams()
+    {
+        return http2MaxConcurrentStreams;
+    }
+
+    @Config("http-server.http2.max-concurrent-streams")
+    @ConfigDescription("Maximum concurrent streams per connection for HTTP/2")
+    public HttpServerConfig setHttp2MaxConcurrentStreams(int http2MaxConcurrentStreams)
+    {
+        this.http2MaxConcurrentStreams = http2MaxConcurrentStreams;
         return this;
     }
 
